# xi-rustfmt

./: Cargo.toml  Makefile  README.md  manifest.toml
src/: main.rs
